# dev-env

./: .gitignore  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: rlprszmf8zpqixz78szf8qcybgxsb4bl-source
