[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-env"
version = "0.0.1"
authors = [
    { name="Karel Schwab", email="35557567+KarelSchwab@users.noreply.github.com" },
]
description = "A small script to generate a Nix flake project with direnv for development."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/KarelSchwab/dev-env"
Issues = "https://github.com/KarelSchwab/dev-env/issues"

[project.scripts]
dev-env = "dev_env:main"

[tool.hatch.build.targets.wheel]
packages = ["src/main.py"]
